--- a/myVue/index.html
+++ b/myVue/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <script>
-      var library = {
-        book1: {
-          name: ''
+      var person = {
+        book: {
+          name: '',
+          price: 99
         },
-        book2: ''
+        hobbies: ['抽烟', '喝酒', '烫头']
       }
-      observe(library)
-      library.book1.name = 'vue权威指南'
-      library.book2 = 'JavaScript深入浅出'
+      observe(person)
+      person.book.name = 'vue权威指南'
     </script>
   </body>
 </html>
