内边距和外边距

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -38,8 +38,8 @@
         怪异盒模型又称IE盒子模型，其中怪异盒子模型的 width 等于 content + padding + border 的宽度，怪异盒子模型的 height 等于 content + padding + border 的高度。
         怪异盒大小的计算公式：width(content + padding + border) + margin
      -->
-    <div class="demo">
-      <span>span1</span>
+    <div class="box">
+      <div class="inner">inner</div>
     </div>
   </body>
 </html>
