--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -38,6 +38,23 @@
         怪异盒模型又称IE盒子模型，其中怪异盒子模型的 width 等于 content + padding + border 的宽度，怪异盒子模型的 height 等于 content + padding + border 的高度。
         怪异盒大小的计算公式：width(content + padding + border) + margin
      -->
+    <!-- 
+      盒子模型之水平方向布局
+      元素的水平方向的布局：元素在其父元素中水平方向的位置由以下几个属性共同决定:
+       margin-left,border-left,padding-left,width(默认值为auto),padding-right,border-right,margin-right
+      一个元素在其父元素中，水平布局必须要满足以下的等式：
+       margin-left+border-left+padding-left+width+padding-right+border-right+margin-right=其父元素内容区的宽度(必须满足)
+      备注： 这七个值中有三个值可以设置为auto
+       width
+       margin-left
+       margin-right
+      设置为auto的效果：
+       1、如果某个值为auto，则会自动调整为auto的那个值以使等式成立
+       2、如果将一个宽度和一个外边距设置为auto，则宽度会调整到最大，设置为auto的外边距会自动为0
+       3、如果将三个值都设置为auto，则外边距都是0，宽度最大
+       4、如果将两个外边距设置为auto，宽度固定值，则会将外边距设置为相同的值。
+      所以我们经常利用效果4来使一个元素在其父元素中水平居中。
+     -->
     <div class="box">
       <div class="inner">inner</div>
     </div>
