盒子模型之垂直方向的布局1

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -60,8 +60,33 @@
           4、如果将两个外边距设置为auto，宽度固定值，则会将外边距设置为相同的值。
         所以我们经常利用效果4来使一个元素在其父元素中水平居中。
      -->
+    <!-- 
+      盒子模型之垂直方向的布局
+        默认情况下父元素的高度被内容撑开。
+        子元素是在父元素的内容区排列的，如果子元素的大小超过了父元素，则子元素会从父元素中溢出，使用overflow属性来设置父元素来处理溢出的子元素：
+          overflow：auto 两个方向都处理
+          overflow-x：单独处理水平方向的
+          overflow-y：单独处理垂直方向的
+        可选值：
+          visible：默认值 子元素会从父元素中溢出，在父元素外部的位置显示
+          hidden：溢出内容将会被裁减不会显示
+          scroll：生成两个滚动条，通过滚动条来查看完整的内容
+          auto：根据需要生成滚动条
+        相邻的垂直方向的外边距重叠(折叠)
+        相邻的垂直方向外边距会发生重叠现象，分以下两者情况：
+        兄弟元素
+          兄弟元素间的相邻垂直外边距会取两者之间的较大值(两者都是正值)
+        特殊情况：
+          1、如果相邻的外边距一正一负，则取两者的和
+          2、如果相邻的外边距都是负值，则取绝对值较大的
+        父子元素
+          父子元素间相邻外边距，子元素的会传递给父元素 (指上外边距)。
+          父子外边距的重叠会影响到页面的布局，必须要进行处理。
+     -->
     <div class="box">
-      <div class="inner">inner</div>
+      <div class="inner">
+        均衡饮食和适量运动对于人们十分重要。均衡饮食是指选择多种类和适当分量的食物，以便能提供各种营养素和恰当热量去维持身体组织的生长，增强抵抗力和达致适中的体重。在进食时，应该按照“饮食金字塔”的分量比例进食及每天喝充足水分，以促进健康。均衡饮食使身体正常运作，有助于抵抗疾病，让人时刻感到精力充沛并维持理想体重。如要达致理想体重，最有效及可持续的方法便是保持健康饮食并进行适量运动。多吃煎炸和太甜或太咸的食物可能会引致肥胖，高血压，高胆固醇等，有损人们的健康。
+      </div>
     </div>
   </body>
 </html>
