盒子模型之垂直方向的布局2

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -83,10 +83,13 @@
           父子元素间相邻外边距，子元素的会传递给父元素 (指上外边距)。
           父子外边距的重叠会影响到页面的布局，必须要进行处理。
      -->
-    <div class="box">
-      <div class="inner">
-        均衡饮食和适量运动对于人们十分重要。均衡饮食是指选择多种类和适当分量的食物，以便能提供各种营养素和恰当热量去维持身体组织的生长，增强抵抗力和达致适中的体重。在进食时，应该按照“饮食金字塔”的分量比例进食及每天喝充足水分，以促进健康。均衡饮食使身体正常运作，有助于抵抗疾病，让人时刻感到精力充沛并维持理想体重。如要达致理想体重，最有效及可持续的方法便是保持健康饮食并进行适量运动。多吃煎炸和太甜或太咸的食物可能会引致肥胖，高血压，高胆固醇等，有损人们的健康。
-      </div>
+
+    <!-- 兄弟元素 -->
+    <!-- <div class="box1"></div>
+    <div class="box2"></div> -->
+    <!-- 父子元素 -->
+    <div class="box3">
+      <div class="box4"></div>
     </div>
   </body>
 </html>
