清除浮动和解决垂直外边距重叠问题

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -140,13 +140,40 @@
           normalize.css：
             对默认样式进行了统一（不同浏览器默认样式不同嘛，所以需要统一）
      -->
+    <!-- 
+      高度塌陷问题
+        高度塌陷是浮动布局中比较常见的一个问题。在浮动布局中，父元素的高度默认是被子元素撑开的，
+        但，当子元素浮动后，子元素会完全脱离文档流，无法撑起父元素的高度，导致父元素的高度丢失。
+        父元素高度丢失后，其下的元素会上移，导致页面布局混乱。
+      使用BFC解决高度塌陷
+      BFC
+        BFC(Block Formatting Context)块级格式化上下文
+        BFC是一个css中的一个隐含属性，可以为一个元素开启BFC，开启BFC后，该元素会变成一个独立的布局区域
+      元素开启BFC后的特点：
+        开启BFC的元素不会被浮动元素所覆盖
+        开启BFC的元素子元素和父元素外边距不会重叠
+        开启BFC的元素可以包含浮动的子元素
+      如何开启BFC
+        1、设置元素的浮动（不推荐）
+        2、设置元素为行内块元素（display:inline-block;不推荐）
+        3、将元素的overflow设置为一个非visible的值 - 常用方式： overflow: hidden/auto;
+      了解完BFC，我们就可以很好的解决高度塌陷问题了，只需要给父元素开启BFC即可：
+      margin-top 塌陷（垂直外边距重叠问题）
+        在两个盒子嵌套时候，内部的盒子设置的margin-top会加到外边的盒子上，
+        导致内部的盒子margin-top设置失败，解决方法如下：
+        1、外部盒子设置一个边框或设定padding值
+        2、外部盒子设置 overflow:hidden
+        3、使用伪元素类：
+      清除浮动
+        为解决父级元素因子级元素浮动引起父级元素高度为0的问题（因子级元素浮动而导致撑不开父级元素），
+        解决方法如下：
+        1、父级上增加属性overflow：hidden
+        2、在最后一个子元素的后面加一个空的div，给它样式属性 clear:both（不推荐）
+        3、使用before和after双伪元素清除浮动，即使用成熟的清除浮动样式类，clearfix
+     -->
 
-    <div class="box"></div>
-    <p>这是一个段落</p>
-    <ul>
-      <li>列表项1</li>
-      <li>列表项2</li>
-      <li>列表项3</li>
-    </ul>
+    <div class="box1 clearfix">
+      <div class="box2"></div>
+    </div>
   </body>
 </html>
