--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -171,9 +171,38 @@
         2、在最后一个子元素的后面加一个空的div，给它样式属性 clear:both（不推荐）
         3、使用before和after双伪元素清除浮动，即使用成熟的清除浮动样式类，clearfix
      -->
+    <!-- 
+      position属性
+        position有5个值，分别为static，relative，absolute，fixed，sticky。
+        1.1 static
+        static是position的默认属性，元素会按正常的文档流进行排序，不会受到top，bottom，left，right的影响。
+        1.2 relative
+        relative相对定位的元素会较正常文档流中的位置进行偏移，受top，bottom，left，right的影响。就是元素还在文档流中像static一样占着位置，但视觉上会有偏移，多用于absolute绝对定位的父元素。
+        1.3 absolute
+        absolute绝对定位会脱离正常的文档流，相对于最近的进行过定位的（非static）父级元素定位，若没有父级元素进行过定位，则相对于即浏览器窗口定位。
+        1.4 fixed
+        fixed固定定位同样是脱离正常的文档流，一直相对于浏览器窗口定位，无论页面如何滚动，此元素总在屏幕的同一个位置。
+        注：当fixed定位的父元素使用了transform的样式时，fixed定位会失效，变成和absolute一样的效果。
+        1.5 sticky
+        sticky粘性定位需要指定 top，right，bottom，left 四个阈值其中之一才会生效。
+        阈值为此元素在可视区域中与边界的距离，跨越特定阈值前为相对定位（relative），当页面滚动导致此元素跨越阈值则变为固定定位（absolute）。
+        注：此属性兼容性不是特别好，请根据业务场景进行选择。
+      当元素的position属性设置为relative时，则开启了元素的相对定位：
+        1.当开启了元素的相对定位以后，而不设置偏移量时，元素不会发生任何变化
+        2.相对定位是相对于元素在文档流中原来的位置进行定位
+        3.相对定位的元素不会脱离文档流
+        4.相对定位会使元素提升一个层级
+        5.相对定位不会改变元素的性质，块还是块，内联还是内联
+      当开启了元素的定位（position属性值是一个非static的值）时，可以通过left right top bottom四个属性来设置元素的偏移量：
+        left：元素相对于其定位位置的左侧偏移量
+        right：元素相对于其定位位置的右侧偏移量
+        top：元素相对于其定位位置的上边的偏移量
+        bottom：元素相对于其定位位置下边的偏移量
+        通常偏移量只需要使用两个就可以对一个元素进行定位，一般选择水平方向的一个偏移量和垂直方向的偏移量来为一个元素进行定位
+     -->
 
-    <div class="box1 clearfix">
-      <div class="box2"></div>
-    </div>
+    <div class="box1">1</div>
+    <div class="box2">2</div>
+    <div class="box3">3</div>
   </body>
 </html>
