--- a/src/leetCode/0013.html
+++ b/src/leetCode/0013.html
@@ -4,43 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>删除有序数组中的重复项</title>
+    <title>移除元素</title>
   </head>
   <body>
     <script>
       /*
-        给你一个升序排列的数组 nums ，请你原地删除重复出现的元素，使每个元素只出现一次，返回删除后数组的新长度。元素的相对顺序应该保持一致 。
-        由于在某些语言中不能改变数组的长度，所以必须将结果放在数组 nums 的第一部分。更规范地说，如果在删除重复项之后有 k 个元素，
-        那么 nums 的前 k 个元素应该保存最终结果。将最终结果插入 nums 的前 k 个位置后返回 k 。
-        不要使用额外的空间，你必须在原地修改输入数组并在使用 O(1) 额外空间的条件下完成。
+        给你一个数组 nums 和一个值 val，你需要原地移除所有数值等于 val 的元素，并返回移除后数组的新长度。
+        不要使用额外的数组空间，你必须仅使用 O(1) 额外空间并原地修改输入数组。
+        元素的顺序可以改变。你不需要考虑数组中超出新长度后面的元素。
         示例 1：
-          输入：nums = [1, 1, 2]
-          输出：2，nums = [1, 2, _]
-          解释：函数应该返回新的长度 2 ，并且原数组 nums 的前两个元素被修改为 1, 2 。不需要考虑数组中超出新长度后面的元素。
+          输入：nums = [3, 2, 2, 3], val = 3
+          输出：2，nums = [2, 2]
+          解释：函数应该返回新的长度 2, 并且 nums 中的前两个元素均为 2。你不需要考虑数组中超出新长度后面的元素。
+               例如，函数返回的新长度为 2 ，而 nums = [2,2,3,3] 或 nums = [2,2,0,0]，也会被视作正确答案。
         示例 2：
-          输入：nums = [0, 0, 1, 1, 1, 2, 2, 3, 3, 4]
-          输出：5， nums = [0, 1, 2, 3, 4]
-          解释：函数应该返回新的长度 5 ，并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4 。不需要考虑数组中超出新长度后面的元素。
+          输入：nums = [0, 1, 2, 2, 3, 0, 4, 2], val = 2
+          输出：5, nums = [0, 1, 3, 0, 4]
+          解释：函数应该返回新的长度 5, 并且 nums 中的前五个元素为 0, 1, 3, 0, 4。注意这五个元素可为任意顺序。
+               不需要考虑数组中超出新长度后面的元素。
         */
-      var removeDuplicates = function (nums) {
-        if (nums && nums.length < 0) {
-          return 0
-        }
-        var low = 0,
-          fast = 1,
-          n = nums.length
-        while (fast < n) {
-          if (nums[fast] !== nums[low]) {
-            nums[low + 1] = nums[fast]
-            low++
+      var removeElement = function (nums, val) {
+        let count = 0
+        for (const i of nums) {
+          if (i != val) {
+            nums[count] = i
+            count++
           }
-          fast++
         }
-        return low + 1
+        return count
       }
 
-      let nums = [0, 0, 1, 1, 1, 2, 2, 3, 3, 4]
-      console.log(removeDuplicates(nums))
+      let nums = [0, 1, 2, 2, 3, 0, 4, 2],
+        val = 2
+      console.log(removeElement(nums, val))
     </script>
   </body>
 </html>
